// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders snapshot of disabled state 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 0.6;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 36px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
    disabled=""
    placeholder="Ariana Grande"
  />
</div>
`;

exports[`Input renders snapshot of focused state 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 36px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-0:disabled {
  cursor: default;
}

.emotion-0:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-0::-webkit-search-decoration,
.emotion-0::-webkit-search-cancel-button,
.emotion-0::-webkit-search-results-button,
.emotion-0::-webkit-search-results-decoration {
  display: none;
}

.emotion-0::-ms-clear,
.emotion-0::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-0::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-0::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-0:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-0::placeholder {
  opacity: 1;
  color: #65707C;
}

<input
  class="emotion-0"
  placeholder="Ariana Grande"
/>
`;

exports[`Input renders snapshot of inverted size large 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #FFFFFF;
  background-color: #213147;
  height: 48px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #9BA3AB;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
  />
</div>
`;

exports[`Input renders snapshot of inverted size medium 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #FFFFFF;
  background-color: #213147;
  height: 36px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #9BA3AB;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
  />
</div>
`;

exports[`Input renders snapshot of inverted size small 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #FFFFFF;
  background-color: #213147;
  height: 24px;
  padding-left: 6px;
  padding-right: 6px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #9BA3AB;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #9BA3AB;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
  />
</div>
`;

exports[`Input renders snapshot of password type 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 36px;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: auto;
  cursor: pointer;
  padding: 0;
  border: 0;
  border-radius: 4px;
  padding: 2px;
  margin-right: -2px;
  background-color: transparent;
  color: inherit;
  outline: 0;
}

.emotion-3:disabled {
  cursor: inherit;
}

<div
  class="emotion-0"
>
  <input
    autocomplete="new-password"
    class="emotion-1"
    spellcheck="false"
    type="password"
  />
  <div
    class="emotion-2"
  >
    <button
      aria-label="Show password text"
      class="emotion-3"
      type="button"
    >
      <svg
        aria-hidden="true"
        height="16"
        viewBox="0 0 18 18"
        width="16"
      >
        <path
          d="M9 14c3.866 0 7-4.367 7-5s-3.134-5-7-5-7 4.102-7 5c0 .898 3.134 5 7 5Zm0 2c-4.209 0-9-4.303-9-7s4.791-7 9-7c4.142 0 9 4.49 9 7s-4.858 7-9 7Zm0-4a3 3 0 1 1 0-6 3 3 0 0 1 0 6Z"
          fill="currentColor"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Input renders snapshot of search type 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  left: 12px;
  color: #05192D;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 36px;
  padding-left: 36px;
  padding-right: 12px;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-2:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-2::-webkit-search-decoration,
.emotion-2::-webkit-search-cancel-button,
.emotion-2::-webkit-search-results-button,
.emotion-2::-webkit-search-results-decoration {
  display: none;
}

.emotion-2::-ms-clear,
.emotion-2::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <svg
      aria-hidden="true"
      data-testid="search-icon"
      height="16"
      viewBox="0 0 18 18"
      width="16"
    >
      <path
        d="m13.26 12.303 4.408 3.953a1 1 0 0 1-1.336 1.488L11.78 13.66a7.5 7.5 0 1 1 1.482-1.358ZM7.5 13a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"
        fill="currentColor"
      />
    </svg>
  </div>
  <input
    class="emotion-2"
    type="search"
  />
</div>
`;

exports[`Input renders snapshot of size large 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 48px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
  />
</div>
`;

exports[`Input renders snapshot of size medium 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 36px;
  padding-left: 12px;
  padding-right: 12px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
  />
</div>
`;

exports[`Input renders snapshot of size small 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 24px;
  padding-left: 6px;
  padding-right: 6px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
  />
</div>
`;

exports[`Input renders snapshot with error 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 36px;
  padding-left: 12px;
  padding-right: 12px;
  border-color: #DD3400;
  box-shadow: 0 0 0 1px #DD3400;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
  />
</div>
`;

exports[`Input renders snapshot with left icon 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  left: 12px;
  color: #05192D;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 36px;
  padding-left: 36px;
  padding-right: 12px;
}

.emotion-2:disabled {
  cursor: default;
}

.emotion-2:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-2::-webkit-search-decoration,
.emotion-2::-webkit-search-cancel-button,
.emotion-2::-webkit-search-results-button,
.emotion-2::-webkit-search-results-decoration {
  display: none;
}

.emotion-2::-ms-clear,
.emotion-2::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-2::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2::placeholder {
  opacity: 1;
  color: #65707C;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <svg
      viewBox="0 0 100 100"
    >
      <circle
        cx="50"
        cy="50"
        r="50"
      />
    </svg>
  </div>
  <input
    class="emotion-2"
  />
</div>
`;

exports[`Input renders snapshot with right enhancer 1`] = `
.emotion-0 {
  position: relative;
  width: 100%;
  opacity: 1;
}

.emotion-0::after {
  content: '';
  display: block;
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  margin: -2px;
  border-radius: 6px;
  pointer-events: none;
  -webkit-transition: box-shadow 125ms ease-out;
  transition: box-shadow 125ms ease-out;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  font-family: Studio-Feixen-Sans,Arial,sans-serif;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.5;
  border: 1px solid #848C92;
  border-radius: 4px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  cursor: text;
  color: #05192D;
  background-color: #FFFFFF;
  height: 36px;
  padding-left: 12px;
  padding-right: 36px;
}

.emotion-1:disabled {
  cursor: default;
}

.emotion-1:-webkit-autofill {
  box-shadow: 0 0 0 36px white inset;
}

.emotion-1::-webkit-search-decoration,
.emotion-1::-webkit-search-cancel-button,
.emotion-1::-webkit-search-results-button,
.emotion-1::-webkit-search-results-decoration {
  display: none;
}

.emotion-1::-ms-clear,
.emotion-1::-ms-reveal {
  display: none;
  width: 0;
  height: 0;
}

.emotion-1::-webkit-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::-moz-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1:-ms-input-placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-1::placeholder {
  opacity: 1;
  color: #65707C;
}

.emotion-2 {
  position: absolute;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: none;
  top: 0;
  right: 12px;
  color: #05192D;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  pointer-events: auto;
  cursor: pointer;
  padding: 0;
  border: 0;
  border-radius: 4px;
  padding: 2px;
  margin-right: -2px;
  background-color: transparent;
  color: inherit;
  outline: 0;
}

.emotion-3:disabled {
  cursor: inherit;
}

<div
  class="emotion-0"
>
  <input
    class="emotion-1"
  />
  <div
    class="emotion-2"
  >
    <button
      class="emotion-3"
      type="button"
    >
      <svg
        viewBox="0 0 100 100"
      >
        <circle
          cx="50"
          cy="50"
          r="50"
        />
      </svg>
    </button>
  </div>
</div>
`;
